# gocr.js

./: README.md  build.sh  demo.html  diff.patch  gocr.js  gocr.js.map  post.js  pre.js  worker.js
gocr-0.50/: .cvsignore  AUTHORS  BUGS  CREDITS  HISTORY  INSTALL  Makefile  Makefile.in  README  READMEde.txt  REMARK.txt  REVIEW  TODO  configure  configure.in  gocr.spec  gpl.html  install-sh  make.bat
gocr-0.50/doc/: Makefile  Makefile.in  example.dtd  example.xml  examples.txt  gocr.html  qr1.fig  unicode.txt
gocr-0.50/examples/: .#Makefile.1.22  color.fig  ex.fig  font.tex  font1.tex  font2.fig  font_nw.tex  handwrt1.jpg.txt  handwrt1.readme  inverse.fig  ocr-a-subset.png.txt  ocr-a.txt  ocr-b.png.txt  polish.tex  rotate45.fig  score  text.tex
gocr-0.50/include/: .cvsignore  config.h  config.h.in  version.h
gocr-0.50/man/: Makefile  Makefile.in
gocr-0.50/man/man1/: gocr.1
gocr-0.50/src/: Makefile  Makefile.in  barcode.c  box.c  database.c  detect.c  gocr  gocr.c  gocr.h  job.c  lines.c  list.c  list.h  ocr0.c  ocr0n.c  otsu.c  output.c  pgm2asc.c  pgm2asc.h  pixel.c  pnm.c  pnm.h  remove.c  unicode.c  unicode.h  unicode_defs.h
